Hotfix to fix possible recipe corruption